; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_raid5.c_add_bio_to_retry.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_raid5.c_add_bio_to_retry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bio = type { %struct.bio* }
%struct.r5conf = type { %struct.TYPE_2__*, i32, %struct.bio* }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bio*, %struct.r5conf*)* @add_bio_to_retry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @add_bio_to_retry(%struct.bio* %0, %struct.r5conf* %1) #0 {
  %3 = alloca %struct.bio*, align 8
  %4 = alloca %struct.r5conf*, align 8
  %5 = alloca i64, align 8
  store %struct.bio* %0, %struct.bio** %3, align 8
  store %struct.r5conf* %1, %struct.r5conf** %4, align 8
  %6 = load %struct.r5conf*, %struct.r5conf** %4, align 8
  %7 = getelementptr inbounds %struct.r5conf, %struct.r5conf* %6, i32 0, i32 1
  %8 = load i64, i64* %5, align 8
  %9 = call i32 @spin_lock_irqsave(i32* %7, i64 %8)
  %10 = load %struct.r5conf*, %struct.r5conf** %4, align 8
  %11 = getelementptr inbounds %struct.r5conf, %struct.r5conf* %10, i32 0, i32 2
  %12 = load %struct.bio*, %struct.bio** %11, align 8
  %13 = load %struct.bio*, %struct.bio** %3, align 8
  %14 = getelementptr inbounds %struct.bio, %struct.bio* %13, i32 0, i32 0
  store %struct.bio* %12, %struct.bio** %14, align 8
  %15 = load %struct.bio*, %struct.bio** %3, align 8
  %16 = load %struct.r5conf*, %struct.r5conf** %4, align 8
  %17 = getelementptr inbounds %struct.r5conf, %struct.r5conf* %16, i32 0, i32 2
  store %struct.bio* %15, %struct.bio** %17, align 8
  %18 = load %struct.r5conf*, %struct.r5conf** %4, align 8
  %19 = getelementptr inbounds %struct.r5conf, %struct.r5conf* %18, i32 0, i32 1
  %20 = load i64, i64* %5, align 8
  %21 = call i32 @spin_unlock_irqrestore(i32* %19, i64 %20)
  %22 = load %struct.r5conf*, %struct.r5conf** %4, align 8
  %23 = getelementptr inbounds %struct.r5conf, %struct.r5conf* %22, i32 0, i32 0
  %24 = load %struct.TYPE_2__*, %struct.TYPE_2__** %23, align 8
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @md_wakeup_thread(i32 %26)
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1

declare dso_local i32 @md_wakeup_thread(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
